p12246 Split ProcessAction.